--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1><code>nodify-string</code> Example</h1>
+    <div id="output"></div>
     <script src="../src/index.js"></script>
     <script>
         const simple = "<h1 id='heading'>Hello</h1><p class='text'>How are you doing?</p>"
@@ -38,10 +39,13 @@ or formatting instructions.</p>
 <p>Ready to start writing?  Either start changing stuff on the left or
 <a href="?text=">clear everything</a> with a simple click.</p>`
 
-    console.log(nodifyString(simple));
-    console.log(nodifyString(simple, { array: true }));
-    console.log(nodifyString(complex));
-    console.log(nodifyString(complex, { array: true }));
+    const output = document.getElementById('output')
+    const simpleNodes = nodifyString(simple)
+    simpleNodes.forEach(node => output.appendChild(node))
+    
+    const complexArray = nodifyString(complex, { array: true })
+    complexArray.forEach(item => output.appendChild(item))
+    
     </script>
 </body>
 </html>
